Update StackHawk environment to AWS from "dev"

--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -3,7 +3,7 @@ app:
   # -- An applicationId obtained from the StackHawk platform. --
   applicationId: b223e68f-5249-4001-be66-b0e352b26368 # (required)
   # -- The environment for the applicationId defined in the StackHawk platform. --
-  env: Development # (required)
+  env: AWS # (required)
   # -- The url of your application to scan --
   host: http://localhost:9000 # (required)
 
