--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -25,7 +25,8 @@ app:
       path: /search
       success: "HTTP.*200.*"
 hawk:
-  spider:
+  failureThreshold: high
+    spider:
     maxDurationMinutes: 5
 #  config:
 #    - "scanner.analyser.redirectEqualsNotFound=false"
