Fixing some docker and scan tuning

--- a/src/main/resources/application-postgresql.properties
+++ b/src/main/resources/application-postgresql.properties
@@ -1,5 +1,5 @@
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://db/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgresql
 spring.datasource.password=postgresql
 spring.datasource.driverClassName=org.postgresql.Driver
